--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "author": "LIQUIDO Team",
   "license": "MIT",
   "devDependencies": {},
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "axios": "^1.6.2"
+  }
 }
